estrutura da validação
